# selenium-to-pdf

./: .gitignore  README.md  pyproject.toml  selenium_to_pdf.py
selenium_to_pdf/: __init__.py  convert.py  selenium_to_pdf.py
tests/: test.py
