[tool.poetry]
name = "selenium-to-pdf"
version = "0.1.2"
description = ""
authors = ["Mike Babb <mike7400@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
