[tool.poetry]
name = "selenium-to-pdf"
version = "0.1.3"
description = ""
authors = ["Mike Babb <mike7400@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.7.2"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
