[tool.poetry]
name = "selenium-to-pdf"
version = "0.2"
description = "A simple utility to convert a web page to PDF using Selenium and Chrome."
authors = ["Mike Babb <mike7400@gmail.com>"]
readme = "README.md"
keywords = ["selenium-to-pdf", "html", "pdf"]
license = "MIT"
repository = "https://github.com/mkbabb/selenium-to-pdf"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.9.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
